; ModuleID = '/home/carl/AnghaBench/kphp-kdb/news/extr_news-data.c_delete_user.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/news/extr_news-data.c_delete_user.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@now = common dso_local global i64 0, align 8
@min_logevent_time = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @delete_user to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @delete_user(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i64, i64* @now, align 8
  %5 = load i64, i64* @min_logevent_time, align 8
  %6 = icmp slt i64 %4, %5
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %12

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @conv_uid(i32 %9)
  %11 = call i32 @delete_user_by_idx(i32 %10)
  store i32 %11, i32* %2, align 4
  br label %12

12:                                               ; preds = %8, %7
  %13 = load i32, i32* %2, align 4
  ret i32 %13
}

declare dso_local i32 @delete_user_by_idx(i32) #1

declare dso_local i32 @conv_uid(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
